refactor: 2단계 피드백 반영 1차
- 지하철역 인수 테스트와 노선 인수 테스트 중복되는 부분 추출
- PUT Method API 명세서에 맞추기
- 파라미터가 많은 생성자는 빌더패턴으로
- StationLineResponse @Getter 추가
- patchLine -> putLine
- 주석 줄이기
- 하위 클래스가 아닐경우 기본생성자로 클래스 인스턴스화 제한하기